# bevy-contrib-inspector

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html
bevy-contrib-inspector-derive/: Cargo.toml
bevy-contrib-inspector-derive/src/: as_html.rs  attrs.rs  inspectable.rs  lib.rs
bevy-contrib-inspector-derive/src/as_html/: as_html_enum.rs  as_html_struct.rs  mod.rs
bevy-contrib-inspector-derive/static/: script.js  style.css
bevy-inspector-derive/: Cargo.toml
bevy-inspector-derive/src/: as_html.rs  attrs.rs  inspectable.rs  lib.rs
bevy-inspector-derive/static/: style.css
examples/: example.rs  server.rs  struct.rs
src/: html_impls.rs  inspector_server.rs  lib.rs  plugin.rs
static/: vec2d_ashtml.js
