[package]
name = "bevy-contrib-inspector"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "starts a webserver for visually editing bevy resources"
readme = "README.md"
repository = "https://github.com/jakobhellermann/bevy-contrib-inspector"
keywords = ["bevy", "inspector", "visual", "editor", "game"]
categories = ["development-tools::procedural-macro-helpers", "game-development", "gui", "visualization"]

[dependencies]
bevy-contrib-inspector-derive = { path = "./bevy-contrib-inspector-derive" }
bevy = "0.1"

crossbeam-channel = "0.4"
tiny_http = "0.7"
webbrowser = "0.5"

[profile.dev.package."*"]
opt-level = 2
