[package]
name = "bevy-contrib-inspector"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "starts a webserver for visually editing bevy resources"
readme = "README.md"
repository = "https://github.com/jakobhellermann/bevy-contrib-inspector"
keywords = ["bevy", "inspector", "visual", "editor", "game"]
categories = ["development-tools::procedural-macro-helpers", "game-development", "gui", "visualization"]

[features]
native = ["webview_official"]

[dependencies]
bevy-contrib-inspector-derive = { path = "./bevy-contrib-inspector-derive" }
bevy = { version = "0.1", default-features = false }

flume = { version = "0.8", default-features = false }
tiny_http = "0.7"

webbrowser = "0.5"
# web-view = { version = "0.6", optional = true }
webview_official = { version = "0.0.3", optional = true }

[dev-dependencies]
bevy = "0.1"

[profile.dev.package."*"]
opt-level = 2
